<resources>
    <string name="app_name">버스랑 정류장 (베타)</string>

    <string name="bus_operation_duration">운행시간</string>
    <string name="bus_allocation_interval">배차간격</string>
    <string name="bus_operating_company">본사</string>
    <string name="bus_garage">차고지</string>
    <string name="bus_arrival_behind_stations">%1$d 정류장 남음</string>
    <string name="bus_arrival_remain_seat">남은 좌석 : %1$d</string>
    <string name="bus_arrival_no_remain_seat">좌석 없음</string>
    <string name="bus_arrival_passed">버스가 도착했거나 지나갔습니다.</string>
    <string name="bus_arrival_operation_end">운행 종료</string>

    <string name="weekday">주중</string>
    <string name="weekend">주말</string>
    <string name="bus_route">노선</string>
    <string name="bus_stop">정류소</string>

    <string name="route_type_red">광역 버스</string>
    <string name="route_type_green">지선 버스</string>
    <string name="route_type_blue">간선 버스</string>
    <string name="route_type_yellow">순환 버스</string>
    <string name="route_type_local">마을 버스</string>
    <string name="route_type_general">일반 버스</string>
    <string name="route_type_metropolitan">직행 버스</string>
    <string name="route_type_airport">공항 버스</string>
    <string name="route_type_purple">시외 버스</string>
    <string name="route_type_suburb">농어촌 버스</string>
    <string name="route_type_favorite">즐겨찾는 노선</string>

    <string name="city_seoul">서울</string>
    <string name="city_gyeonggi">경기</string>
    <string name="city_incheon">인천</string>

    <string name="nav_title_search">검색</string>
    <string name="nav_title_favorite">즐겨찾기</string>
    <string name="nav_title_nearby_station">주변 정류장</string>

    <string name="action_refresh">새로고침</string>
    <string name="action_settings">환경 설정</string>
    <string name="action_undo">실행 취소</string>
    <string name="action_show_on_map">지도에서 보기</string>
    <string name="action_add_to_favorite">즐겨찾기에 추가</string>
    <string name="action_add_to_favorite_with_link">바로가기를 연결하여 즐겨찾기에 추가</string>
    <string name="action_new_favorite_group">새 폴더</string>
    <string name="action_new_favorite_entry">새 즐겨찾기</string>
    <string name="action_rename_favorite_group">폴더 이름 변경</string>
    <string name="action_remove_from_favorite">즐겨찾기에서 제거</string>
    <string name="action_enable_gps">GPS 사용 설정</string>
    <string name="action_quit">종료</string>
    <string name="action_ok">좋아</string>
    <string name="action_no">싫어</string>

    <string name="hint_search">노선, 정류장 이름 또는 ID</string>
    <string name="hint_search_by_location">주변 정류장 검색</string>
    <string name="hint_nearby_location">주변 정류장</string>
    <string name="hint_route_heading_to">%1$s 방면</string>
    <string name="hint_select_favorite_link">등록할 지점을 선택하세요.</string>
    <string name="hint_input_group_name">폴더 이름을 입력하세요.</string>
    <string name="hint_choose_favorite_group">폴더를 선택하세요.</string>
    <string name="hint_powered_by">Powered by %1$s</string>
    <string name="hint_information_unavailable">정보 없음</string>
    <string name="hint_choose_nearby_station">가까운 정류장을 선택하세요.</string>
    <string name="hint_favorite_tutorial"><![CDATA[<br><br>사용방법<br><br> 1. <b>길게 눌러서 위치를 변경할 수 있어요.</b><br> 2. <b>좌우로 밀어서 삭제할 수 있어요.</b>]]></string>
    <string name="hint_enable_gps">위치 정보를 허용하시면 더 다양한 기능을 이용할 수 있어요.</string>
    <string name="hint_quit">어플리케이션을 종료하시겠습니까?</string>
    <string name="hint_do_not_ask_again">다음부터 묻지 않기</string>

    <string name="favorite_default_group">기본 폴더</string>
    <string name="alert_favorite_added">즐겨찾기에 추가되었습니다.</string>
    <string name="alert_favorite_added_with">%1$s : 즐겨찾기에 추가되었습니다.</string>
    <string name="alert_favorite_removed">즐겨찾기가 제거되었습니다.</string>
    <string name="alert_favorite_group_added">새 폴더가 생성되었습니다.</string>
    <string name="alert_favorite_group_removed">폴더가 제거되었습니다.</string>
    <string name="alert_zoom_to_search_nearby_station">정류장을 확인하려면 지도를 더 확대하세요.</string>
    <string name="alert_gps_enabled">GPS 기능이 활성화되었습니다.</string>
    <string name="alert_gps_disabled">GPS 기능이 비활성화되었습니다.</string>
    <string name="alert_gps_permission_disabled">GPS 기능을 사용할 권한이 없습니다.</string>

    <string name="error_with_reason">오류가 발생했습니다. (%1$s)</string>
    <string name="error_search_keyword_too_short">2글자 이상 입력하세요.</string>
    <string name="error_failed_to_retrieve_near_station">근처의 정류장을 찾을 수 없습니다. (3km 내외)</string>
    <string name="error_failed_to_retrieve_map_line">노선 정보를 가져오는데 실패하였습니다.</string>
    <string name="error_no_station_information">정류장 정보가 없습니다.</string>

    <string name="placeholder_search_start">검색할 키워드를 입력하세요.\n(노선, 정류장 이름 혹은 ID로 검색할 수 있어요.)</string>
    <string name="placeholder_search_empty">검색 결과가 없어요!\n다른 검색어를 입력해보시겠어요?</string>
    <string name="placeholder_favorite_empty">즐겨찾기가 비어있어요.\n아래 버튼을 눌러 새 즐겨찾기를 추가 해 보세요.</string>
    <string name="bus_arrival_behind_time_in_minute">%1$d분 전</string>

    <string name="first_arriving_bus">첫 번째 도착예정 버스</string>
    <string name="second_arriving_bus">두 번째 도착예정 버스</string>
    <string name="unknown_vehicle_number">차량 번호 정보 없음</string>

    <string name="walkthrough_search_title">통합 검색</string>
    <string name="walkthrough_search_description">노선 번호, 정류장 또는 정류장 ID\n어떤 것으로든 검색할 수 있어요.</string>
    <string name="walkthrough_route_title">실시간 노선 정보</string>
    <string name="walkthrough_route_description">더이상 정류장을 찾아 헤메지 마세요!\n\n쉽게 구분되는 실시간 정보는 물론, GPS 기능을 이용하면 순식간에 근처의 정류장으로 이동할 수 있어요.</string>
    <string name="walkthrough_station_title">주변 정류장</string>
    <string name="walkthrough_station_description">같은 이름의 정류장이 많아 헷갈리시죠?\n\n이제 주변의 정류장을 지도에서 쉽게 찾아 보세요.</string>
    <string name="walkthrough_favorite_title">즐겨찾기</string>
    <string name="walkthrough_favorite_description">내가 원하는 순서로 정렬할 수는 없을까?\n\n다양한 편집 기능을 갖춘 즐겨찾기를 통해 나만의 즐겨찾기 목록을 만들어 보세요.</string>

</resources>
