<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_to_favorite"
        android:orderInCategory="50"
        android:title="@string/action_add_to_favorite"
        android:icon="@drawable/ic_favorite_star"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="75"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_show_on_map"
        android:icon="@drawable/ic_map_36dp"
        app:showAsAction="ifRoom" />
</menu>
